[package]
authors = ["Jesse Vorisek <jesse.vorisek@gmail.com>"]
categories = ["development-tools"]
description = "Rust component object model"
edition = "2021"
homepage = "https://github.com/jesse99/gear"
license = "MIT"
keywords = ["component", "OOP", "trait"]
name = "gear"
readme = "README.md"
repository = "https://github.com/jesse99/gear"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = "0.3" # copyable fixed width strings
fnv = "1.0"         # custom hasher that is much more performant for small keys
paste = "1.0"       # allows identifiers to be pasted together within macros

[dev-dependencies]
chrono = "0.4.31"                                  # time library
clap = { version = "4.4", features = ["derive"] }  # command line parser
colored = "2"                                      # termimal colors
rand = { version = "0.8", features = ["std_rng"] } # random number generator
